--- a/src/scss/paginas/inicio/_entradas.scss
+++ b/src/scss/paginas/inicio/_entradas.scss
@@ -49,7 +49,7 @@
         background-color: v.$secundario;
     }
     &--gratis {
-        background-color: v.$azul;
+        background-color: v.$coral;
     }
 
     
@@ -75,7 +75,7 @@
         justify-content: center;
     }
     &__enlace {
-        @include m.boton(v.$azul, v.$blanco);
+        @include m.boton(v.$coral, v.$blanco);
         width: auto;
     }
 
