--- a/src/scss/ui/footer/_footer.scss
+++ b/src/scss/ui/footer/_footer.scss
@@ -2,15 +2,8 @@
 @use 'base/mixins' as m;
 
 .footer {
-    background-color:#99b1ff;
-    background-image:
-    radial-gradient(at 77% 92%, hsla(354,71%,60%,1) 0px, transparent 50%),
-    radial-gradient(at 28% 27%, hsla(332,83%,69%,1) 0px, transparent 50%),
-    radial-gradient(at 25% 40%, hsla(197,87%,79%,1) 0px, transparent 50%),
-    radial-gradient(at 59% 53%, hsla(114,72%,65%,1) 0px, transparent 50%),
-    radial-gradient(at 53% 52%, hsla(342,69%,68%,1) 0px, transparent 50%),
-    radial-gradient(at 36% 93%, hsla(310,74%,73%,1) 0px, transparent 50%),
-    radial-gradient(at 67% 61%, hsla(203,99%,65%,1) 0px, transparent 50%);
+    background-color: v.$coral;
+ 
     margin-top: 8rem;
     padding-top: 3rem;
     color: v.$blanco;
@@ -36,7 +29,7 @@
     }
 
     &__copyright {
-        background-color: darken(v.$azul, 10);
+        background-color: lighten(v.$coral, 5);
         margin: 3rem 0 0 0;
         padding: 2rem 0;
         text-align: center;
